# fingrid-py

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: cd.yml  ci.yml
tests/: test_client.py  test_endpoint.py  test_utils.py
